Begin Refactoring